tests/semantic/valid/69_i6_implicit_params.hulk
type Parent(x: Number) {}

type Child inherits Parent {}

let c = new Child(1) in print(c);
