tests/semantic/invalid/60_t_new_arg_type.hulk
type Point(x:Number) {
    x:Number = x;
}
let p = new Point("hello") in print(p.x);
